# evaluation_core_h7_v0

./: .mxproject  CMakeLists.txt  README.md  STM32H723ZGTx_FLASH.ld  evaluation_core_h7_v0.ioc
Core/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
Core/Src/: gpio.c  main.c  sdmmc.c  stm32h7xx_it.c  usart.c  usb_otg.c
app/nand_flash_lx_fx_example/: demo_filex_nand_flash.h  lx_stm32_nand_simulator_driver.c
app/usd_fx_example/: fx_stm32_sd_driver.h
cmake/stm32cubemx/: CMakeLists.txt
examples/nand_flash_lx_fx_example/: demo_filex_nand_flash.c  fx_stm32_levelx_nand_driver.c  fx_stm32_levelx_nand_driver.h  lx_stm32_nand_simulator_driver.h  lx_stm32_nand_simulator_driver_LATER.c
examples/usbx_usd_example/: app.c
examples/usbx_usd_example/threadx/: app_threadx.c  app_threadx.h
examples/usbx_usd_example/threadx/app/: app_azure_rtos.c  app_azure_rtos.h  app_azure_rtos_config.h
examples/usbx_usd_example/usbx/app/: app_usbx_device.c  app_usbx_device.h  ux_device_descriptors.c  ux_device_descriptors.h  ux_device_msc.c  ux_device_msc.h
examples/usd_fx_example/: demo_usd_filex.c  demo_usd_filex.h  fx_stm32_sd_driver.c  fx_stm32_sd_driver_glue.c  prueba_usd_filex_hot_plug.c
middleware/filex/: CMakeLists.txt  fx_sram_driver.c  fx_sram_driver.h  fx_user.h
middleware/filex/stm32_sample_drivers/: fx_stm32_sram_driver.c
middleware/levelx/: CMakeLists.txt  lx_user.h
middleware/levelx/common/drivers/: lx_stm32_nand_simulator_driver.c
middleware/levelx/common/inc/: lx_api.h
middleware/levelx/common/src/: lx_nand_flash_simulator.c  lx_nor_flash_simulator.c
middleware/threadx/: CMakeLists.txt
middleware/usbx/: CMakeLists.txt  ux_user.h
